--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,6 +9,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Майами</h1>
+    <div class="app">
+        <main class="main">
+            <h1>Your best <span>Dictionary</span></h1>
+            <form class="form">
+                <div class="form-group">
+                    <input type="text" placeholder="Type a word..." name="word" id="word-input" autocomplete="off" value="">
+                </div>
+                <button type="submit">Search</button>
+            </form>
+            <div class="error">Word not found</div>
+            <div class="results">
+                <div class="results-info">
+                    <div class="results-word">Miami</div>
+                    <div class="results-sound">
+                        <img src="../assets/images/sound.png" alt="">
+                    </div>
+                </div>
+                <div class="results-list">
+                    <div class="results-item">
+                        <div class="results-item__part">Noun</div>
+                        <div class="results-item__definitions">
+                            <div class="results-item__definition">
+                                <p>Random text...</p>
+                                <div class="results-item__example">
+                                    Random example...
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
