--- a/src/app/index.html
+++ b/src/app/index.html
@@ -21,7 +21,7 @@
             <div class="error">Word not found</div>
             <div class="results">
                 <div class="results-info">
-                    <div class="results-word">Miami</div>
+                    <div class="results-word"></div>
                     <div class="results-sound">
                         <img src="../assets/images/sound.png" alt="">
                     </div>
