--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <button type="submit">Search</button>
             </form>
-            <div class="error">Word not found</div>
+            <div class="error"></div>
             <div class="results">
                 <div class="results-info">
                     <div class="results-word"></div>
@@ -26,18 +26,7 @@
                         <img src="../assets/images/sound.png" alt="">
                     </div>
                 </div>
-                <div class="results-list">
-                    <div class="results-item">
-                        <div class="results-item__part">Noun</div>
-                        <div class="results-item__definitions">
-                            <div class="results-item__definition">
-                                <p>Random text...</p>
-                                <div class="results-item__example">
-                                    Random example...
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="results-list"> 
                 </div>
             </div>
         </main>
