--- a/src/app/scss/components/results.scss
+++ b/src/app/scss/components/results.scss
@@ -4,8 +4,7 @@
     padding: 12px;
     border-radius: 6px;
     color: rgb(74, 74, 74);
-    // display: none;
-    display: block;
+    display: none;
   
     &-list {
       margin-top: 16px;
